--- a/desenvolvimento-de-software-II/detran-upf/package.json
+++ b/desenvolvimento-de-software-II/detran-upf/package.json
@@ -15,12 +15,14 @@
     "@types/node": "^20.11.21",
     "drizzle-kit": "^0.20.14",
     "eslint-config-k4geno": "^1.0.3",
+    "prisma": "^5.10.2",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.0",
+    "@prisma/client": "^5.10.2",
     "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.29.4",
     "fastify": "^4.26.1",
