--- a/desenvolvimento-de-software-II/detran-upf/api/package.json
+++ b/desenvolvimento-de-software-II/detran-upf/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file .env src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run --dir __tests__/src/use-cases"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,8 @@
     "eslint-config-k4geno": "^1.0.3",
     "prisma": "^5.10.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
