--- a/desenvolvimento-de-software-II/detran-upf/api/docker-compose.yml
+++ b/desenvolvimento-de-software-II/detran-upf/api/docker-compose.yml
@@ -10,3 +10,13 @@ services:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: postgres
             POSTGRES_DB: postgres
+
+    db-detran-test:
+        image: postgres:alpine
+        ports:
+            - "5433:5432" # Porta alterada para evitar conflitos
+        container_name: detran-upf-db-test
+        environment:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: postgres
+            POSTGRES_DB: postgres_test # Nome do DB alterado para refletir o uso em testes
